ViTables ChangeLog
==================
** March 21, 2011 **
The Menu plugin functionality is now part of the ViTables core.

** March 14, 2011 **
The NSIS installer script has been largely rewritten.

** March 09, 2011 **
The behavior of the current cell when browsing large views has been fixed.

** March 08, 2011 **
Bugs 330 and 359 have been fixed.

** March 07, 2011 **
Navigation of large datasets using the right scrollbar has been debugged.

** March 04, 2011 **
Subpackage nodeProperties has been reorganised and refactored.

Bug 335 has been fixed.

First implementation of soft/external links support is completed.

** March 03, 2011 **
Added a Properties dialog for both soft and external links.

Added basic support for PyTables soft links and external links.

** February 26, 2011 **
Bug 338 has been fixed.

** February 25, 2011 **
Bug 333 has been fixed.

** February 24, 2011 **
Bug 334 has been fixed.

Bug 340 has been fixed.

** February 22, 2011 **
Fixed bug 341.

Fixed bug 348.

** February 16, 2011 **
Docs have been updated after checking that ViTables runs fine with Python 2.7.

** February 09, 2011 **
Issues specific to Windows Vista have been reworked in the NSIS installer script.

** February 05, 2011 **
Fixed a minor issue (specific to Windows Vista) in the NSIS installer script.

** February 02, 2011 **
Fixed a minor issue in the NSIS installer script.

Fixed a minor issue in the setup.py module.

The Users' Guide has been updated.

Packaging procedure changed accordingly to recent changes in timeseries plugin.

** February 01, 2011 **
The timeseries and menu plugins have been enhanced.

** January 28, 2011 **
Fixed a bug introduced in the CSV plugin in r220.

** January 27, 2011 **
Fixed a bug in the initial configuration setup.

** January 26, 2011 **
Fixed a small drag & drop issue.

Python strings and Unicode strings have been revisited.

The Makefile file for building the MSWindows installer has changed.

** January 25, 2011 **