@@ -159,12 +159,20 @@ or in %BUILDDIR%/linkcheck/output.txt.
 )
 
 if "%1" == "doctest" (
-	%SPHINXBUILD% -b doctest %ALLSPHINXOPTS% %BUILDDIR%/doctest
-	if errorlevel 1 exit /b 1
-	echo.
-	echo.Testing of doctests in the sources finished, look at the ^
+  %SPHINXBUILD% -b doctest %ALLSPHINXOPTS% %BUILDDIR%/doctest
+  if errorlevel 1 exit /b 1
+  echo.
+  echo.Testing of doctests in the sources finished, look at the ^
 results in %BUILDDIR%/doctest/output.txt.
-	goto end
+  goto end
+)
+
+if "%1" == "pdf" (
+  %SPHINXBUILD% -b pdf %ALLSPHINXOPTS% %BUILDDIR%/pdf
+  if errorlevel 1 exit /b 1
+  echo.
+  echo.Build finished, look at the results in %BUILDDIR%/pdf
+  goto end
 )
 
 :end
